--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,19 @@
     <link rel="stylesheet" href="hub.css" />
     <link rel="stylesheet" href="center.css" />
     <link rel="stylesheet" href="info.css" />
-    <script type="module" src="data.js"></script>
+    <script type="module" src="controller.js"></script>
     <title>Weather App</title>
   </head>
   <body>
     <section class="container">
       <header class="header">
-        <img src="../icon white\loupe.png" alt="" class="btn-search" />
-        <!-- <input type="text" placeholder="Search..." class="search" /> -->
+        <img src="../icon white/loupe.png" alt="" class="btn-search principal-search-btn"/>
+        <!-- <form class="search">
+          <input type="text" placeholder="Search..." class="input-search"/>
+          <button class="btn-input" type="button">
+            <img src="../icon white/loupe.png" alt="" class="btn-search btn-input" />
+          </button>
+        </form> -->
         <div class="date-time">
           <h1 class="time">6:12 PM</h1>
           <h3 class="date">Tuesday - 7/13/2022</h3>
