--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
                 src="../icon white/celsius.png"
                 alt="F"
                 class="btn-measures btn-measure-active"
-                id="btn-measures"
+                id="btn-celsius"
               />
             </div>
 
