Humidity and rain added

--- a/src/index.html
+++ b/src/index.html
@@ -48,15 +48,32 @@
           </div>
 
           <div class="weather-info">
-            <div class="next-days-1">
+            <div class="days-div-weather meteo-days-1">
+              <div class="meteo-line1 meteo-line">
+                <h1 class="calc-humidity calc-meteo">58%</h1>
+                <img src="../icon white/humidity.png" alt="f" class="img-meteo" />
+              </div>
+              <h3 class="text-meteo">Humidity</h3>
+            </div>
+            <div class="days-div-weather meteo-days-2">
+              <div class="meteo-line2 meteo-line">
+                <img src="../icon white/rain.png" alt="f" class="img-meteo" />
+                <h1 class="calc-rain calc-meteo">10%</h1>
+              </div>
+              <h3 class="text-meteo">Rain</h3>
+            </div>
+          
+            <!-- <div class="days-div-weather next-days-1">
               <img src="../icon white/cloudy.png" alt="f" class="img-next" />
               <h3 class="text-days">Wed</h3>
             </div>
-            <div class="next-days-2">
+            <div class="days-div-weather next-days-2">
               <img src="../icon white/cloudy.png" alt="f" class="img-next" />
               <h3 class="text-days">Thur</h3>
-            </div>
+            </div> -->
+
           </div>
+          
 
           <div class="footer">
             <div class="measures">
@@ -75,9 +92,9 @@
             </div>
 
             <div class="btn-div">
-              <!-- <button class="btn-meteorological" id="btn-data">
+              <button class="btn-meteorological hidden" id="btn-data">
                 Meteorological data
-              </button> -->
+              </button>
               <button class="btn-few-days" id="btn-data">Next few days</button>
             </div>
           </div>
