--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,11 @@
   <body>
     <section class="container">
       <header class="header">
-        <img src="../icon white/loupe.png" alt="" class="btn-search principal-search-btn"/>
+        <img
+          src="../icon white/loupe.png"
+          alt=""
+          class="btn-search principal-search-btn"
+        />
         <!-- <form class="search">
           <input type="text" placeholder="Search..." class="input-search"/>
           <button class="btn-input" type="button">
@@ -51,7 +55,11 @@
             <div class="days-div-weather meteo-days-1">
               <div class="meteo-line1 meteo-line">
                 <h1 class="calc-humidity calc-meteo">58%</h1>
-                <img src="../icon white/humidity.png" alt="f" class="img-meteo" />
+                <img
+                  src="../icon white/humidity.png"
+                  alt="f"
+                  class="img-meteo"
+                />
               </div>
               <h3 class="text-meteo">Humidity</h3>
             </div>
@@ -62,7 +70,7 @@
               </div>
               <h3 class="text-meteo">Rain</h3>
             </div>
-          
+
             <!-- <div class="days-div-weather next-days-1">
               <img src="../icon white/cloudy.png" alt="f" class="img-next" />
               <h3 class="text-days">Wed</h3>
@@ -71,9 +79,7 @@
               <img src="../icon white/cloudy.png" alt="f" class="img-next" />
               <h3 class="text-days">Thur</h3>
             </div> -->
-
           </div>
-          
 
           <div class="footer">
             <div class="measures">
@@ -85,7 +91,7 @@
               />
               <img
                 src="../icon white/celsius.png"
-                alt="F"
+                alt="C"
                 class="btn-measures btn-measure-active"
                 id="btn-celsius"
               />
@@ -97,6 +103,37 @@
               </button>
               <button class="btn-few-days" id="btn-data">Next few days</button>
             </div>
+
+            <div class="user">
+              <h3 class="user-font">
+                Photo by
+                <a href="https://unsplash.com/es/@anniespratt" target="_blank"
+                  >Annie Spratt</a
+                >
+                on
+                <a href="https://unsplash.com/es" target="_blank">Unsplash</a>
+              </h3>
+            </div>
+          </div>
+
+          <div class="final">
+            <h1 class="hidden-credit">a</h1>
+            <div class="credit-font">
+              <h3 class="credits">
+                made by
+                <a href="https://www.behance.net/danielross8" target="_blank"
+                  >@danirssx</a
+                >
+              </h3>
+            </div>
+            <a
+              href="https://stackoverflow.com/questions/3779812/a-href-link-on-img" class="download-icon"
+              ><img
+                src="../icon white/download.png"
+                alt="Download image"
+                class="download-icon"
+              />
+            </a>
           </div>
         </div>
       </div>
