App almost finished

--- a/src/index.html
+++ b/src/index.html
@@ -137,6 +137,10 @@
           </div>
         </div>
       </div>
+
+      <div class="log-error">
+        <button class="error">!!Wrong City/Region Logged!!. <br> Try another one.</button>
+      </div>
     </section>
   </body>
 </html>
